--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -20,7 +20,7 @@
         <!-- SWIPER     -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
         <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-
+        <script src="https://kit.fontawesome.com/249079f89b.js" crossorigin="anonymous"></script>
         <script defer src="./test.js"></script>
     </head>
     <body>
@@ -84,67 +84,69 @@
                 <section class="player">
                     <article class="on">
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Red"></div>
                             <div class="text"></div>
                         </div>
                     </article>
 
                     <article>
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Orange"></div>
                             <div class="text"></div>
                         </div>
                     </article>
 
                     <article>
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Yellow"></div>
                             <div class="text"></div>
                         </div>
                     </article>
 
                     <article>
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Green"></div>
                             <div class="text"></div>
                         </div>
                     </article>
 
                     <article>
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Sky"></div>
                             <div class="text"></div>
                         </div>
                     </article>
 
                     <article>
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Navy"></div>
                             <div class="text"></div>
                         </div>
                     </article>
 
                     <article>
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Violet"></div>
                             <div class="text"></div>
                         </div>
                     </article>
 
                     <article>
                         <div class="inner">
-                            <div class="pic"></div>
+                            <div class="pic Black"></div>
                             <div class="text"></div>
                         </div>
                     </article>
                 </section>
 
                 <nav class="btnPrev">
-                    <span>Left BangMangE</span>
+                    <i class="fa-solid fa-reply"></i>
+                    <span>Left</span>
                 </nav>
 
                 <nav class="btnNext">
-                    <span>Right BangMangE</span>
+                    <span>Right</span>
+                    <i class="fa-solid fa-share"></i>
                 </nav>
                 <!-- Swiper -->
                 <div class="promotion">
