--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -148,6 +148,10 @@
                     <span>Right</span>
                     <i class="fa-solid fa-share"></i>
                 </nav>
+
+                <div class="plus">
+                    <a href="#p7" class="plusBtn">PLUS</a>
+                </div>
                 <!-- Swiper -->
                 <div class="promotion">
                     <div class="swiper mySwiper">
