--- a/1/pg_1/test7.html
+++ b/1/pg_1/test7.html
@@ -9,7 +9,7 @@
  
 </head>
 <body>
-    <section class="pg_1">
+    <section id="pg_1">
         <div class="banner">
             <video autoplay muted loop>
                 <source src="../video/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
