--- a/1/pg_1/test7.html
+++ b/1/pg_1/test7.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <section id="pg_1">
+        <!-- <EMBED style="xray: gray( )" src="./video/수정.mp3" width=0 height=0 showstatusbar="-1" volume="0" autostart="true" loop="-1" ; hidden="true"> -->
+        <EMBED style="xray: gray( )" src="./video/수정.mp3" width=0 height=0 showstatusbar="-1" volume="0"autoplay loop hidden="true">
+
         <div class="banner">
             <video autoplay muted loop>
-                <source src="../video/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
+                <source src="./video/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
             </video>
         <div class="container">
             <h2 class="title title1"><span class="title_neon">CO</span><span class="title_opacity0">DINGON</span></h2>
