--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,9 +18,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
+    <!-- css -->
     <link rel="stylesheet" href="./main.css" />
+
+    <!-- Js -->
     <script defer src="./main.js"></script>
   </head>
+
   <body>
     <section id="pg_1">
       <div class="banner">
