--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -29,10 +29,10 @@
   <body>
     <section id="pg_1">
       <!-- <EMBED style="xray: gray( )" src="./video/수정.mp3" width=0 height=0 showstatusbar="-1" volume="0" autostart="true" loop="-1" ; hidden="true"> -->
-      <EMBED style="xray: gray( )" src="./video/수정.mp3" width=0 height=0 showstatusbar="-1" volume="100" autoplay loop hidden="true">
+      <EMBED style="xray: gray( )" src="../1/pg_1/video/수정.mp3" width=0 height=0 showstatusbar="-1" volume="100" autoplay loop hidden="true">
       <div class="banner">
           <video autoplay muted loop>
-              <source src="./video/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
+              <source src="../1/pg_1/video/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
           </video>
       <div class="container">
           <h2 class="title title1"><span class="title_neon">CO</span><span class="title_opacity0">DINGON</span></h2>
