--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -29,21 +29,28 @@
   <body>
     <section id="pg_1">
       <!-- <EMBED style="xray: gray( )" src="./video/수정.mp3" width=0 height=0 showstatusbar="-1" volume="0" autostart="true" loop="-1" ; hidden="true"> -->
-      <EMBED style="xray: gray( )" src="../1/pg_1/video/수정.mp3" width=0 height=0 showstatusbar="-1" volume="100" autoplay loop hidden="true">
+      <EMBED style="xray: gray( )" src="./img/수정.mp3" width=0 height=0 showstatusbar="-1" volume="100" autoplay loop hidden="true" class="noneDisplay">
+      <EMBED style="xray: gray( )" src="./img/수정.mp3" width=0 height=0 showstatusbar="-1" volume="100"autoplay loop hidden="true" class="noneDisplay">
       <div class="banner">
           <video autoplay muted loop>
-              <source src="../1/pg_1/video/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
+              <source src="./img/galaxy.mp4" type="video/mp4">
           </video>
       <div class="container">
           <h2 class="title title1"><span class="title_neon">CO</span><span class="title_opacity0">DINGON</span></h2>
           <h2 class="title title2"><span class="title_opacity0">POS</span><span class="title_neon">CO</span></h2>
           <h2 class="title title3"><span class="title_neon">CO</span><span class="title_opacity0">SMIC</span></h2>
       </div>
-    </section>
+      
+  </section>
     
     <div class="noContent"></div>
-    <section id="pg_2">
-      <h1>test</h1>
+    <section id="pg_2" class="greensock">
+      <div class="intro">
+        <div class="h1">
+          <img src="./img/spaceship.png" alt="airplane" class="photo" />
+        </div>
+      </div>
+      <!-- <h1>test</h1>
       <div class="cursor_item"></div>
       <div class="container">
         <div class="things">
@@ -57,7 +64,7 @@
             <img src="./img/asteroid2.png" alt="asteriod" class="asteriod" />
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <section id="pg_3">
