--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -43,7 +43,11 @@
       
   </section>
     
-    <div class="noContent"></div>
+    <div class="noContent">
+      <section id="section03" class="demo">
+        <a href="#section04"><span></span>Scroll</a>
+      </section>
+    </div>
     <section id="pg_2" class="greensock">
       <div class="intro">
         <div class="h1">
