--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -45,7 +45,7 @@
     
     <div class="noContent">
       <section id="section03" class="demo">
-        <a href="#section04"><span></span>Scroll</a>
+        <a href="#pg_2"><span></span>Scroll</a>
       </section>
     </div>
     <section id="pg_2" class="greensock">
