--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -53,6 +53,45 @@
           <img src="./img/spaceship.png" alt="airplane" class="photo" />
         </div>
       </div>
+
+      <div class="moving">
+        <div class="things">
+          <img src="./img/asteroid1.png" alt="aster1" class="aster1">
+        </div>
+        <div>
+          <img src="./img/asteroid2.png" alt="aster2" class="aster2">
+        </div>
+        <div>
+          <img src="./img/asteroid3.png" alt="aster3" class="aster3">
+        </div>
+        <div>
+          <img src="./img/asteroid4.png" alt="aster4" class="aster4">
+        </div>
+        <div>
+          <img src="./img/asteroid5.png" alt="aster5" class="aster5">
+        </div>
+        <div>
+          <img src="./img/asteroid6.png" alt="aster6" class="aster6">
+        </div>
+        <div>
+          <img src="./img/asteroid7.png" alt="aster7" class="aster7">
+        </div>
+        <div>
+          <img src="./img/asteroid8.png" alt="aster8" class="aster8">
+        </div>
+
+        <div>
+          <img src="./img/nebula.png" alt="nebula" class="nebula">
+        </div>
+
+        <div>
+          <img src="./img/satellite.png" alt="satellite" class="sate">
+        </div>
+
+        <div>
+          <img src="./img/ufo.png" alt="ufo" class="ufo">
+        </div>
+      </div>
       <!-- <h1>test</h1>
       <div class="cursor_item"></div>
       <div class="container">
