--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -53,11 +53,30 @@
         <div class="h1">
           <img src="./img/spaceship.png" alt="airplane" class="photo" />
         </div>
-      </div>
 
-      
-      <div class="container">
-        <div class="things">
+        <div class="container">
+          <div>
+            <h2 class="t1">Welcome</h2>
+          </div>
+
+          <div>
+            <h2 class="t2">Today, you're going to </h2>
+          </div>
+
+          <div>
+            <h2 class="t3">explore 5 planets.</h2>
+          </div>
+
+          <div>
+            <h2 class="t4">Hope u </br> have a good time.</h2>
+          </div>
+
+          <div>
+            <h2 class="t5">Let's start !</h2>
+          </div>
+
+
+        <!-- <div class="things">
           <img src="./img/asteroid1.png" alt="aster1" class="aster1">
         </div>
         <div class="things">
@@ -93,7 +112,7 @@
         <div class="things">
           <img src="./img/ufo.png" alt="ufo" class="ufo">
         </div>
-        </div>
+        </div> -->
     </section>
 
       <!-- <h1>test</h1>
