--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -60,7 +60,7 @@
           </div>
 
           <div>
-            <h2 class="t2">Today, you're going to </h2>
+            <h2 class="t2">We're going to </h2>
           </div>
 
           <div>
@@ -68,7 +68,7 @@
           </div>
 
           <div>
-            <h2 class="t4">Hope u </br> have a good time.</h2>
+            <h2 class="t4">Have a good time.</h2>
           </div>
 
           <div>
