--- a/Soo/rainbow/soo.html
+++ b/Soo/rainbow/soo.html
@@ -7,9 +7,28 @@
         <title>Rainbow DoGGaeB</title>
         <link rel="stylesheet" href="./style.css" />
         <script defer src="./soo.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     </head>
     <body>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 518.59 255.42">
+        <section id="rainbow">
+            <figure class="swing">
+                <div class="noBox"></div>
+                <div class="album">
+                    <div class="noBox"></div>
+                    <span class="element"></span>
+                    <div class="enterBtn" style="display: none">Enter</div>
+                </div>
+
+                <div class="loading" style="display: none">
+                    <div class="noBox"></div>
+                    <span class="elementLoading"></span>
+                </div>
+            </figure>
+        </section>
+
+        <section id="scroll"></section>
+
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 518.59 255.42">
             <defs>
                 <clipPath id="01">
                     <path d="M111.01,15.83C57.14,21.44,15.81,71.73,15.01,125.76c-.83,56.66,42.99,112.25,103.74,114.58,61.56,2.36,110.39-51.13,112.26-108.39,2.12-64.9-56.48-122.74-120-116.13Z" />
@@ -56,6 +75,6 @@
                     d="M399.04,15.03c-61.96-1.57-113.3,52.86-109.96,114.6,3.28,60.64,58.21,108,117.52,102.43,53.23-5,94.92-51.2,96.92-103.9,2.2-58.19-44.49-111.62-104.48-113.13Z"
                 />
             </g>
-        </svg>
+        </svg> -->
     </body>
 </html>
