--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -207,21 +207,12 @@
       </div>
     </section>
 
+    <div id="gradient2"></div>
     <section id="pg_4">
-      <div class="container">
-        <div class="part-1"><p>당신의</p></div>
-        <div class="part-2"><p>행성은</p></div>
-        <div class="commet">
-          <img src="../Soo/img/JGE.png" alt="logo" />
-        </div>
-        <div class="part-3"><p>무엇</p></div>
-        <div class="part-4"><p>입니까?</p></div>
-        <!-- <div class="questionMark">
-          <img src="../img/questionmark1.png" alt="" />
-        </div> -->
-        <div class="monster">
-          <img src="../img/yoda.png" alt="" />
-        </div>
+      <div class="box-with-text">
+        What's<br>
+        your<br>
+        planet?
       </div>
     </section>
   </body>
