--- a/Hoon/jihoon.html
+++ b/Hoon/jihoon.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- 폰트어썸 -->
+    <script
+      src="https://kit.fontawesome.com/ebe7817d95.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- gsap -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
@@ -18,46 +23,90 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    
     <script defer src="./jihoon.js"></script>
     <link rel="stylesheet" href="./jihoon.css" />
   </head>
-  <body>
-    <div class="container">
-      <div class="member">
-        <img class="member1" src="../img/red.png" alt="" />
-        <img class="member2" src="../img/blue.png" alt="" />
-        <img class="member3" src="../img/purple.png" alt="" />
-        <img class="member4" src="../img/green.png" alt="" />
-      </div>
-    </div>
-    <div class="box2"></div>
-    <div class="box3">
-      <div class="scene-1">
-        <img src="../img/purple.png" alt="" />
-        <p>원: "우주정거장을 만들어야..."</p>
-      </div>
-      <div class="scene-2">
-        <img src="../img/blue.png" alt="" />
-        <p>민정: "저 태양 예전에는 햄 같았는데...</p>
-      </div>
-      <div class="scene-3">
-        <img src="../img/red.png" alt="" />
-        <p>승수: "형 제 귀에서 피날거 같아요...</p>
-      </div>
-      <div class="scene-4">
-        <img src="../img/green.png" alt="" />
-        <p class="text-d">지훈: "그런 표정 짓지마..."</p>
-      </div>
-    </div>
 
-    <section id="intro-movie">
-      <ul class="movie-container">
-        <li>
-          <div class="title"></div>
-          <div class="movie-img"></div>
-          <div class="listen"></div>
-        </li>
-      </ul>
+
+
+  <body>
+    <section id="jh-first">
+      <div class="container">
+        <div class="member">
+          <img class="member1" src="../img/red.png" alt="" />
+          <img class="member2" src="../img/blue.png" alt="" />
+          <img class="member3" src="../img/purple.png" alt="" />
+          <img class="member4" src="../img/green.png" alt="" />
+        </div>
+      </div>
     </section>
+    <header>
+      <div class="logo"><img src="./logo.png" alt="" /></div>
+      <div class="intro">지훈별에 오신걸 환영합니다!</div>
+      <div class="sns">
+        <a href="https://velog.io/@kkangg">
+          <i class="fa-brands fa-blogger"></i></a>
+        <a href="https://github.com/kanngji">
+          <i class="fa-brands fa-github"></i></a>
+        <a href="https://www.instagram.com/kkangghurryoff/">
+          <i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </header>
+    <div class="concept">내가 뽑은 영화 X OST 찰떡 TOP 5</div>
+    <section id="jh-second">
+      <div class="container">
+        <div id="title"><p>악마는 프라다를 입는다</p></div>
+        <div class="mv-img"><img src="img/movie0.jfif" alt="" /></div>
+        <div id="director">
+          <span>감독</span>
+          <p>데이빗 프랭클</p>
+        </div>
+          <div id="actor">
+          <span>출연</span>
+          <p>메릴 스트립, 앤 해서웨이</p>
+        </div>
+        <div id="genre">
+          <span>장르</span>
+          <p>코미디, 드라마</p>
+        </div>
+        <div id="time">
+          <span>상영시간</span>
+          <p>109분</p>
+        </div>
+        <div id="rating">
+          <span>상영등급</span>
+          <p>12세 이상</p>
+        </div>
+        <div id="soundtrack">
+          <span><a href="https://www.youtube.com/watch?v=pxyuwD-nmeg" target="_blank">SOUND TRACK 듣기</span><i class="fa-solid fa-music"></i
+          ></a>
+        </div>
+        <nav id="jh-third">
+          <div class="btns">
+            <i id="prev-Btn" class="fa-solid fa-angle-left"></i>
+            <a id="moveNM"
+              href="https://namu.wiki/w/%EC%95%85%EB%A7%88%EB%8A%94%20%ED%94%84%EB%9D%BC%EB%8B%A4%EB%A5%BC%20%EC%9E%85%EB%8A%94%EB%8B%A4(%EC%98%81%ED%99%94)"
+              target="_blank"
+              ><i class="fa-solid fa-circle-info"></i
+            ></a>
+            <i id="next-Btn" class="fa-solid fa-angle-right"></i>
+          </div>
+        </nav>
+        
+      </div>
+    </section>
+
+    <!-- <nav id="jh-third">
+      <div class="btns">
+        <i id="prev-Btn" class="fa-solid fa-angle-left"></i>
+        <a id="moveNM"
+          href="https://namu.wiki/w/%EC%95%85%EB%A7%88%EB%8A%94%20%ED%94%84%EB%9D%BC%EB%8B%A4%EB%A5%BC%20%EC%9E%85%EB%8A%94%EB%8B%A4(%EC%98%81%ED%99%94)"
+          target="_blank"
+          ><i class="fa-solid fa-circle-info"></i
+        ></a>
+        <i id="next-Btn" class="fa-solid fa-angle-right"></i>
+      </div>
+    </nav> -->
   </body>
 </html>
