--- a/Soo/rainbow/soo.html
+++ b/Soo/rainbow/soo.html
@@ -4,11 +4,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Rainbow DoGGaeB</title>
+        <title>Enter</title>
+
+        <!-- css -->
         <link rel="stylesheet" href="./style.css" />
+
+        <!-- js -->
         <script defer src="./soo.js"></script>
+
+        <!-- Typed js -->
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     </head>
+
     <body>
         <section id="rainbow">
             <figure class="swing">
@@ -25,56 +32,5 @@
                 </div>
             </figure>
         </section>
-
-        <section id="scroll"></section>
-
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 518.59 255.42">
-            <defs>
-                <clipPath id="01">
-                    <path d="M111.01,15.83C57.14,21.44,15.81,71.73,15.01,125.76c-.83,56.66,42.99,112.25,103.74,114.58,61.56,2.36,110.39-51.13,112.26-108.39,2.12-64.9-56.48-122.74-120-116.13Z" />
-                </clipPath>
-
-                <clipPath id="02">
-                    <path d="M250.37,15.83c-55.1,1.67-100.16,47.34-105.29,99.87-6.19,63.4,46.96,124.94,112.26,123.1,57.2-1.61,104.97-51.33,106.06-109.16,1.18-61.91-51.44-115.67-113.03-113.81Z" />
-                </clipPath>
-
-                <clipPath id="03">
-                    <path d="M409.85,15.75c-64.14-7.86-124.22,48.67-120.77,113.89,3.31,62.66,64.05,110.46,123.87,101.72,46.67-6.82,83.94-46.76,89.81-93.21,7.25-57.38-34.62-115.26-92.9-122.4Z" />
-                </clipPath>
-            </defs>
-
-            <g class="svg-bg">
-                <path
-                    clip-path="url(#01)"
-                    d="M119.58,15.33c-40.3,.33-68.46,28.72-73.8,34.31-3.98,4.17-31.32,33.74-30.76,76.12,.68,52.24,43.62,115.3,109.16,114.64,59.95-.61,106.48-54.21,106.9-111.55,.47-64.69-57.91-113.97-111.49-113.53Z"
-                />
-                <path
-                    clip-path="url(#02)"
-                    d="M250.37,15.83c-59.73,1.95-106.68,54.49-105.72,113.12,1.01,61.8,55,113.66,116.71,109.65,56.8-3.69,101.06-53.47,102.05-108.96,1.09-60.83-50.05-115.86-113.03-113.81Z"
-                />
-                <path
-                    clip-path="url(#03)"
-                    d="M399.04,15.03c-61.96-1.57-113.3,52.86-109.96,114.6,3.28,60.64,58.21,108,117.52,102.43,53.23-5,94.92-51.2,96.92-103.9,2.2-58.19-44.49-111.62-104.48-113.13Z"
-                />
-            </g>
-
-            <g class="svg-main">
-                <path
-                    clip-path="url(#01)"
-                    class="cls-2"
-                    d="M119.58,15.33c-40.3,.33-68.46,28.72-73.8,34.31-3.98,4.17-31.32,33.74-30.76,76.12,.68,52.24,43.62,115.3,109.16,114.64,59.95-.61,106.48-54.21,106.9-111.55,.47-64.69-57.91-113.97-111.49-113.53Z"
-                />
-                <path
-                    clip-path="url(#02)"
-                    class="cls-2"
-                    d="M250.37,15.83c-59.73,1.95-106.68,54.49-105.72,113.12,1.01,61.8,55,113.66,116.71,109.65,56.8-3.69,101.06-53.47,102.05-108.96,1.09-60.83-50.05-115.86-113.03-113.81Z"
-                />
-                <path
-                    clip-path="url(#03)"
-                    class="cls-2"
-                    d="M399.04,15.03c-61.96-1.57-113.3,52.86-109.96,114.6,3.28,60.64,58.21,108,117.52,102.43,53.23-5,94.92-51.2,96.92-103.9,2.2-58.19-44.49-111.62-104.48-113.13Z"
-                />
-            </g>
-        </svg> -->
     </body>
 </html>
