--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -153,54 +153,42 @@
           <a href="#">EXPLORE</a>
         </div>
 
+
         <div class="card" style="--delay: 0">
           <div class="content">
             <div class="img">
               <img src="./img/planet2.png" alt="행성2사진" />
             </div>
-            <!-- <div class="details">
-                        <span>HI</span>
-                        <p>fronted developer</p>
-                    </div> -->
           </div>
           <a href="#">EXPLORE</a>
         </div>
+
 
         <div class="card" style="--delay: 1">
           <div class="content">
             <div class="img">
               <img src="./img/earth.png" alt="지구사진" />
             </div>
-            <!-- <div class="details">
-                        <span>HI</span>
-                        <p>fronted developer</p>
-                    </div> -->
           </div>
-          <a class="earth" href="./mypage.html">EXPLORE</a>
+          <a class="earth" href="../Min/mypage/mypage.html">EXPLORE</a>
         </div>
+
 
         <div class="card" style="--delay: 2">
           <div class="content">
             <div class="img">
               <img src="./img/planet3.png" alt="행성3사진" />
             </div>
-            <!-- <div class="details">
-                        <span>HI</span>
-                        <p>fronted developer</p>
-                    </div> -->
           </div>
           <a href="#">EXPLORE</a>
         </div>
+
 
         <div class="card" style="--delay: 2">
           <div class="content">
             <div class="img">
               <img src="./img/planet4.png" alt="행성4사진" />
             </div>
-            <!-- <div class="details">
-                        <span>HI</span>
-                        <p>fronted developer</p>
-                    </div> -->
           </div>
           <a href="#">EXPLORE</a>
         </div>
