--- a/Soo/rainbow/main/main.html
+++ b/Soo/rainbow/main/main.html
@@ -84,33 +84,15 @@
                     </div>
                 </article>
 
-                <article class="one_half">
-                    <!-- <div class="scrollDist"></div>
-                <div class="main">
-                    <svg viewBox="0 0 1200 800" xmlns="http://www.w3.org/2000/svg">
-                        <mask id="m">
-                            <g class="cloud1">
-                                <rect fill="#fff" width="100%" height="801" y="799" />
-                                <image xlink:href="https://assets.codepen.io/721952/cloud1Mask.jpg" width="1200" height="800" />
-                            </g>
-                        </mask>
-
-                        <image class="cloud2" xlink:href="https://assets.codepen.io/721952/cloud2.png" width="1200" height="800" />
-                        <image class="cloud1" xlink:href="https://assets.codepen.io/721952/cloud1.png" width="1200" height="800" />
-                        <image class="cloud3" xlink:href="https://assets.codepen.io/721952/cloud3.png" width="1200" height="800" />
-                        <text fill="#fff" x="350" y="200">EXPLORE</text>
-
-                        <g mask="url(#m)">
-                            <rect fill="transparent" width="100%" height="100%" />
-                            <text x="350" y="200" fill="#162a43">FURTHER</text>
-                        </g>
-                    </svg>
-                </div> -->
-                </article>
-
                 <article class="second">
                     <div class="red">
-                        <img src="../main/img/ch_red.png" alt="pink" class="pic1" />
+                        <img src="../main/img/red_trans.png" alt="pink" class="pic1" />
+                        <img src="../main/img/red1.png" alt="red1" class="pic2" />
+                        <div class="text text1">Parent Day</div>
+                        <div class="text text2">She was a</div>
+                        <div class="text text3">Flower.</div>
+                        <div class="text text4">So cute.</div>
+                        <div class="text text5">Is'n it?</div>
                     </div>
                 </article>
             </section>
