--- a/Soo/rainbow/main/main.html
+++ b/Soo/rainbow/main/main.html
@@ -88,11 +88,12 @@
                     <div class="red">
                         <img src="../main/img/red_trans.png" alt="pink" class="pic1" />
                         <img src="../main/img/red1.png" alt="red1" class="pic2" />
+                        <img src="../main/img/red2_trans.png" alt="red1" class="pic3" />
                         <div class="text text1">Parent Day</div>
                         <div class="text text2">She was a</div>
                         <div class="text text3">Flower.</div>
                         <div class="text text4">So cute.</div>
-                        <div class="text text5">Is'n it?</div>
+                        <div class="text text5">Isn't it?</div>
                     </div>
                 </article>
             </section>
