--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -135,7 +135,7 @@
               <img src="./img/planet4.png" alt="행성4사진" />
             </div>
           </div>
-          <a href="#">EXPLORE</a>
+          <a href="./Soo/soo.html">EXPLORE</a>
         </div>
       </div>
     </section>
