--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -105,7 +105,7 @@
               <img src="./img/planet2.png" alt="행성2사진" />
             </div>
           </div>
-          <a href="#">EXPLORE</a>
+          <a href="../1/mypage/index.html">EXPLORE</a>
         </div>
 
 
