--- a/COMPLETE/Soo/main/main.html
+++ b/COMPLETE/Soo/main/main.html
@@ -96,6 +96,21 @@
                         <div class="text text5">Isn't it?</div>
                     </div>
                 </article>
+
+                <article class="third">
+                    <h1 class="from">From</h1>
+                    <h1 class="the">the</h1>
+                    <h1 class="birthday">birthday,</h1>
+                    <div id="count">
+                        <div id="month"></div>
+                        <div id="day"></div>
+                        <div id="hour"></div>
+                        <div id="min"></div>
+                        <div id="sec"></div>
+                    </div>
+                    <img src="./img/bbaegom1.jpg" alt="bbaegom1" class="bbaegom1" />
+                    <img src="./img/bbaegom_trans.png" alt="bbaegom2" class="bbaegom2" />
+                </article>
             </section>
         </div>
     </body>
