--- a/COMPLETE/Soo/main/main.html
+++ b/COMPLETE/Soo/main/main.html
@@ -220,13 +220,13 @@
                     </div>
 
                     <div id="btns">
-                        <div class="btn btn_red">빨</div>
-                        <div class="btn btn_orange">주</div>
-                        <div class="btn btn_yellow">노</div>
-                        <div class="btn btn_green">초</div>
-                        <div class="btn btn_sky">하</div>
-                        <div class="btn btn_violet">보</div>
-                        <div class="btn btn_black">검</div>
+                        <div class="btn btn_red">Red</div>
+                        <div class="btn btn_orange">Orange</div>
+                        <div class="btn btn_yellow">Yellow</div>
+                        <div class="btn btn_green">Green</div>
+                        <div class="btn btn_sky">Sky</div>
+                        <div class="btn btn_violet">Violet</div>
+                        <div class="btn btn_black">Black</div>
                     </div>
                 </article>
             </section>
