--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -105,7 +105,7 @@
               <img src="./img/planet2.png" alt="행성2사진" />
             </div>
           </div>
-          <a href="../Hoon/jihoon.html">EXPLORE</a>
+          <a href="../Hoon/jihoon.html" target="_blank">EXPLORE</a>
         </div>
 
         <div class="card" style="--delay: 1">
@@ -114,7 +114,7 @@
               <img src="./img/earth.png" alt="지구사진" />
             </div>
           </div>
-          <a class="earth" href="../Min/mypage/mypage.html">EXPLORE</a>
+          <a class="earth" href="../Min/mypage/mypage.html" target="_blank">EXPLORE</a>
         </div>
 
 
@@ -124,7 +124,7 @@
               <img src="./img/planet3.png" alt="행성3사진" />
             </div>
           </div>
-          <a href="../1/mypage/index.html">EXPLORE</a>
+          <a href="../1/mypage/index.html" target="_blank">EXPLORE</a>
         </div>
 
 
@@ -134,7 +134,7 @@
               <img src="./img/planet4.png" alt="행성4사진" />
             </div>
           </div>
-          <a href="./Soo/soo.html">EXPLORE</a>
+          <a href="./Soo/soo.html" target="_blank">EXPLORE</a>
         </div>
       </div>
     </section>
