--- a/Min/random.html
+++ b/Min/random.html
@@ -76,6 +76,10 @@
                 </div>
             </div>
 
+            <div class="team_member">
+                <a href="#"><p>Click to see<br>Our Members</p></a>
+            </div>
+
         </div>
     </footer>
 </body>
