--- a/Hoon/jihoon.html
+++ b/Hoon/jihoon.html
@@ -41,6 +41,7 @@
         </div>
       </div>
     </section>
+    <section id="last">
     <header>
       <div class="logo"><img src="./logo.png" alt="" /></div>
       <div class="intro">지훈별에 오신걸 환영합니다!</div>
@@ -96,6 +97,7 @@
         
       </div>
     </section>
+  </section>
 
     <!-- <nav id="jh-third">
       <div class="btns">
