--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -142,10 +142,11 @@
     <div id="gradient2"></div>
     <section id="pg_4">
       <div class="box-with-text">
-        What's<br>
-        your<br>
-        planet?
+        <img src="./img/what.png" alt="what" class="what">
+        <img src="./img/your.png" alt="your" class="your">
+        <img src="./img/planet.png" alt="planet" class="planet">
       </div>
+      <div class="arrows"></div>
     </section>
   </body>
 </html>
