--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -146,7 +146,7 @@
         <img src="./img/your.png" alt="your" class="your">
         <img src="./img/planet.png" alt="planet" class="planet">
       </div>
-      <div class="arrows"></div>
+      <a href="../Min/random.html" target="_blank"><div class="arrows"></div></a>
     </section>
   </body>
 </html>
