--- a/Min/random.html
+++ b/Min/random.html
@@ -77,7 +77,7 @@
             </div>
 
             <div class="team_member">
-                <a href="#"><p>Click to see<br>Our Members</p></a>
+                <a href="../Hoon/member.html" target="_blank"><p>Click to see<br>Our Members</p></a>
             </div>
 
         </div>
