--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -124,7 +124,7 @@
               <img src="./img/planet3.png" alt="행성3사진" />
             </div>
           </div>
-          <a href="../1/mypage/index.html" target="_blank">EXPLORE</a>
+          <a href="../1/pg_1/mypage/index.html" target="_blank">EXPLORE</a>
         </div>
 
 
