--- a/firstpage/firstpage/firstpage.html
+++ b/firstpage/firstpage/firstpage.html
@@ -20,7 +20,7 @@
     <div class="background">
         <div class="white" style="display:none"></div>
         <img src="../firstpage/cockpit.png" alt="조종실 사진">
-        <video src="../hole.mp4" autoplay muted loop></video>
+        <video src="../hole.mp4" autoplay muted></video>
 
         
         <div class="planet">
