--- a/COMPLETE/Soo/main/main.html
+++ b/COMPLETE/Soo/main/main.html
@@ -220,13 +220,13 @@
                     </div>
 
                     <div id="btns">
-                        <div class="btn btn_red">Red</div>
-                        <div class="btn btn_orange">Orange</div>
-                        <div class="btn btn_yellow">Yellow</div>
-                        <div class="btn btn_green">Green</div>
-                        <div class="btn btn_sky">Sky</div>
-                        <div class="btn btn_violet">Violet</div>
-                        <div class="btn btn_black">Black</div>
+                        <div class="btn btn_red"></div>
+                        <div class="btn btn_orange"></div>
+                        <div class="btn btn_yellow"></div>
+                        <div class="btn btn_green"></div>
+                        <div class="btn btn_sky"></div>
+                        <div class="btn btn_violet"></div>
+                        <div class="btn btn_black"></div>
                     </div>
                 </article>
             </section>
