승수거 빼고 연결

--- a/1/pg_1/mypage/index.html
+++ b/1/pg_1/mypage/index.html
@@ -7,8 +7,46 @@
     <title>Document</title>
     <link rel="stylesheet" href="./mypage.css" />
     <script defer src="./mypage.js"></script>
+    <script defer src="../../../Hoon/sidebar.js"></script>
   </head>
   <body>
+    <div class="logo">
+      <img src="../../../COMPLETE/img/JGE.png" alt="logo" />
+    </div>
+    <div class="navigation">
+      <ul>
+        <li class="list">
+          <a href="../../../COMPLETE/Soo/soo.html" id="orange">
+            <img src="../../../Hoon/img/planet4.png" alt="승수 별" />
+            <span class="text">승수 별</span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="./index.html" id="purple">
+            <img src="../../../Hoon/img/planet3.png" alt="원 별" />
+            <span class="text">원 별</span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="../../../Hoon/jihoon.html" id="green">
+            <img src="../../../Hoon/img/planet2.png" alt="지훈 별" />
+            <span class="text">지훈 별</span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="../../../Min/mypage/mypage.html" id="blue">
+            <img src="../../../Hoon/img/planet1.png" alt="민정 별" />
+            <span class="text">민정 별</span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="../../../Min/random.html" id="find">
+            <img src="../../../Hoon/img/planet5.png" alt="나만의 별" />
+            <span class="text">나의 별찾기</span>
+          </a>
+        </li>
+      </ul>
+    </div>
     <div id="gallery">
       <div class="tile tile1">
         <img src="./dazzi/KakaoTalk_20220810_163638228_01.jpg" />
@@ -50,6 +88,5 @@
       <img src="./img/spaceman.png" class="spaceman" />
       <img src="./img/planet2.png" class="planet2" />
     </div>
-
   </body>
 </html>
