--- a/Hoon/member.html
+++ b/Hoon/member.html
@@ -37,7 +37,7 @@
             <p>소속: KDT-1기</p>
             <p>이름: 강지훈</p>
             <p>취미: 카드게임</p>
-            <p>특기: 상상</p>
+            <p>특기: 영화보기</p>
             <p>좋아하는 것: 팝콘</p>
           </div>
         </div>
