--- a/Hoon/jihoon.html
+++ b/Hoon/jihoon.html
@@ -41,31 +41,31 @@
       <div class="navigation">
         <ul>
           <li class="list">
-            <a href="#" id="orange">
+            <a href="../COMPLETE/Soo/soo.html" id="orange">
               <img src="./img/planet4.png" alt="승수 별" />
               <span class="text">승수 별</span>
             </a>
           </li>
           <li class="list">
-            <a href="#" id="purple">
+            <a href="../1/pg_1/mypage/index.html" id="purple">
               <img src="./img/planet3.png" alt="원 별" />
               <span class="text">원 별</span>
             </a>
           </li>
           <li class="list">
-            <a href="#" id="green">
+            <a href="./jihoon.html" id="green">
               <img src="./img/planet2.png" alt="지훈 별" />
               <span class="text">지훈 별</span>
             </a>
           </li>
           <li class="list">
-            <a href="#" id="blue">
+            <a href="../Min/mypage/mypage.html" id="blue">
               <img src="./img/planet1.png" alt="민정 별" />
               <span class="text">민정 별</span>
             </a>
           </li>
           <li class="list">
-            <a href="#" id="find">
+            <a href="../Min/random.html" id="find">
               <img src="./img/planet5.png" alt="나만의 별" />
               <span class="text">나의 별찾기</span>
             </a>
