--- a/Min/mypage/mypage.html
+++ b/Min/mypage/mypage.html
@@ -26,31 +26,31 @@
           <div class="navigation">
             <ul>
               <li class="list">
-                <a href="../COMPLETE/Soo/soo.html" id="orange">
+                <a href="../../COMPLETE/Soo/soo.html" id="orange">
                   <img src="../../Hoon/img/planet4.png" alt="승수 별" />
                   <span class="text">승수 별</span>
                 </a>
               </li>
               <li class="list">
-                <a href="../1/pg_1/mypage/index.html" id="purple">
+                <a href="../../1/pg_1/mypage/index.html" id="purple">
                   <img src="../../Hoon/img/planet3.png" alt="원 별" />
                   <span class="text">원 별</span>
                 </a>
               </li>
               <li class="list">
-                <a href="./jihoon.html" id="green">
+                <a href="../../Hoon/jihoon.html" id="green">
                   <img src="../../Hoon/img/planet2.png" alt="지훈 별" />
                   <span class="text">지훈 별</span>
                 </a>
               </li>
               <li class="list">
-                <a href="../Min/mypage/mypage.html" id="blue">
+                <a href="../mypage/mypage.html" id="blue">
                   <img src="../../Hoon/img/planet1.png" alt="민정 별" />
                   <span class="text">민정 별</span>
                 </a>
               </li>
               <li class="list">
-                <a href="../Min/random.html" id="find">
+                <a href="../random.html" id="find">
                   <img src="../../Hoon/img/planet5.png" alt="나만의 별" />
                   <span class="text">나의 별찾기</span>
                 </a>
