태양 옆 a 주소

--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -95,7 +95,7 @@
               <img src="./img/planet1.png" alt="행성1사진" />
             </div>
           </div>
-          <a href="#">EXPLORE</a>
+          <a href="../Min/random.html">EXPLORE</a>
         </div>
 
 
