--- a/Hoon/jihoon.html
+++ b/Hoon/jihoon.html
@@ -127,13 +127,13 @@
         </div>
         <nav id="jh-third">
           <div class="btns">
-            <i id="prev-Btn" class="fa-solid fa-angle-left"></i>
+            <a href="#jh-second"><i id="prev-Btn" class="fa-solid fa-angle-left"></i></a>
             <a id="moveNM"
               href="https://namu.wiki/w/%EC%95%85%EB%A7%88%EB%8A%94%20%ED%94%84%EB%9D%BC%EB%8B%A4%EB%A5%BC%20%EC%9E%85%EB%8A%94%EB%8B%A4(%EC%98%81%ED%99%94)"
               target="_blank"
               ><i class="fa-solid fa-circle-info"></i
             ></a>
-            <i id="next-Btn" class="fa-solid fa-angle-right"></i>
+            <a href="#jh-second"><i id="next-Btn" class="fa-solid fa-angle-right"></i></a>
           </div>
         </nav>
         
