--- a/Min/mypage/mypage.html
+++ b/Min/mypage/mypage.html
@@ -28,31 +28,31 @@
               <li class="list">
                 <a href="../../COMPLETE/Soo/soo.html" id="orange">
                   <img src="../../Hoon/img/planet4.png" alt="승수 별" />
-                  <span class="text">승수 별</span>
+                  <span class="text"><p>J</p></span>
                 </a>
               </li>
               <li class="list">
                 <a href="../../1/pg_1/mypage/index.html" id="purple">
                   <img src="../../Hoon/img/planet3.png" alt="원 별" />
-                  <span class="text">원 별</span>
+                  <span class="text">1</span>
                 </a>
               </li>
               <li class="list">
                 <a href="../../Hoon/jihoon.html" id="green">
                   <img src="../../Hoon/img/planet2.png" alt="지훈 별" />
-                  <span class="text">지훈 별</span>
+                  <span class="text">G</span>
                 </a>
               </li>
               <li class="list">
                 <a href="../mypage/mypage.html" id="blue">
                   <img src="../../Hoon/img/planet1.png" alt="민정 별" />
-                  <span class="text">민정 별</span>
+                  <span class="text">E</span>
                 </a>
               </li>
               <li class="list">
                 <a href="../random.html" id="find">
                   <img src="../../Hoon/img/planet5.png" alt="나만의 별" />
-                  <span class="text">나의 별찾기</span>
+                  <span class="text">?</span>
                 </a>
               </li>
             </ul>
