--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -29,8 +29,8 @@
   <body>
     <section id="pg_1">
       <!-- <EMBED style="xray: gray( )" src="../1/pg_1/video/bgm.mp3" width=0 height=0 showstatusbar="-1" volume="0" autostart="true" loop="-1" ; hidden="true"> -->
-      <EMBED style="xray: gray( )" src="../1/pg_1/video/bgm.mp3" width=0 height=0 showstatusbar="-1" volume="100" autoplay loop hidden="true" class="noneDisplay">
-      <EMBED style="xray: gray( )" src="../1/pg_1/video/bgm.mp3" width=0 height=0 showstatusbar="-1" volume="100"autoplay loop hidden="true" class="noneDisplay">
+      <EMBED style="xray: gray( )" src="../1/pg_1/video/Wlsbgm.mp3" width=0 height=0 showstatusbar="-1" volume="100" autoplay loop hidden="true" class="noneDisplay">
+      <EMBED style="xray: gray( )" src="../1/pg_1/video/Wlsbgm.mp3" width=0 height=0 showstatusbar="-1" volume="100"autoplay loop hidden="true" class="noneDisplay">
       <div class="banner">
           <video autoplay muted loop>
               <source src="./img/galaxy.mp4" type="video/mp4">
