--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -142,9 +142,15 @@
     <div id="gradient2"></div>
     <section id="pg_4">
       <div class="box-with-text">
-        <img src="./img/what.png" alt="what" class="what">
+        <!-- <div>what's</div>
+        <div>your</div>
+        <div>planet</div> -->
+        <!-- <img src="./img/what.png" alt="what" class="what">
         <img src="./img/your.png" alt="your" class="your">
-        <img src="./img/planet.png" alt="planet" class="planet">
+        <img src="./img/planet.png" alt="planet" class="planet"> -->
+        <img src="./img/white_what.jpg" alt="what" class="what">
+        <img src="./img/white_your.jpg" alt="your" class="your">
+        <img src="./img/white_planet.jpg" alt="planet" class="planet">
       </div>
       <a href="../Min/random.html" target="_blank"><div class="arrows"></div></a>
     </section>
