--- a/firstpage/firstpage/firstpage.html
+++ b/firstpage/firstpage/firstpage.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
 
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>    
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
 
+        <script defer src="./firstpage.js"></script>
 
-    <script defer src="./firstpage.js"></script>
+        <link rel="stylesheet" href="./firstpage.css" />
+    </head>
 
-    <link rel="stylesheet" href="./firstpage.css">
+    <body>
+        <div class="background">
+            <div class="white" style="display: none"></div>
+            <img src="../firstpage/cockpit.png" alt="조종실 사진" />
+            <video src="../hole.mp4" autoplay muted></video>
 
-</head>
-
-<body>
-    <div class="background">
-        <div class="white" style="display:none"></div>
-        <img src="../firstpage/cockpit.png" alt="조종실 사진">
-        <video src="../hole.mp4" autoplay muted></video>
-
-        
-        <div class="planet">
-            <img src="./planet4.png" alt="지구 사진">
+            <div class="planet">
+                <img src="./planet4.png" alt="지구 사진" />
+            </div>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
