--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -139,6 +139,18 @@
       </div>
     </section>
 
+    <section id="exitEarth">
+      <div class="background">
+        <!-- <div class="white" style="display: none"></div> -->
+        <img src="../firstpage/firstpage/cockpit.png" alt="조종실 사진" class="jojong"/>
+        <video src="../firstpage/hole.mp4" autoplay muted></video>
+
+        <div class="bigEarth">
+            <img src="../firstpage/firstpage/planet4.png" alt="지구 사진" />
+        </div>
+    </div>
+    </section>
+
     <div id="gradient2"></div>
     <section id="pg_4">
       <div class="box-with-text">
