--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -139,6 +139,10 @@
       </div>
     </section>
 
+    <section id="esc">
+      <a href="#videoLocate" class="exitBtn">EXIT</a>
+    </section>
+
     <section id="exitEarth">
       <div class="background">
         <!-- <div class="white" style="display: none"></div> -->
@@ -150,6 +154,8 @@
         </div>
     </div>
     </section>
+
+    <section id="videoLocate"></section>
 
     <div id="gradient2"></div>
     <section id="pg_4">
