--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -162,7 +162,7 @@
       <div class="box-with-text">
         <!-- <div>what's</div>
         <div>your</div>
-        <div>planet</div> -->
+        <div>planet?</div> -->
         <!-- <img src="./img/what.png" alt="what" class="what">
         <img src="./img/your.png" alt="your" class="your">
         <img src="./img/planet.png" alt="planet" class="planet"> -->
